# parallel-lib-neur-net

./: CMakeLists.txt  README.md
cmake/: Config.cmake
inc/: dnn_layer.hpp  dnn_model.hpp  optimizers.hpp
inc/layers/: activations.h  basic_layer.h  config.h  conv_layer.h  fc_layer.h  fc_layer_mpi.h  filter.h  loss.h  max_pool.h  optimizers.h  optimizers_mpi.h  rec_layer.h  structures_mpi.h
inc/linalg_1/: matrix.hpp
inc/models/: conv_model.h  dnn_model.h  dnn_model_mpi.h  rnn_model.h
inc/mpi/: acivations_mpi.h  dnn_model_cached.h  fc_layer_mpi.h  loss_mpi.h  optimizers_mpi.h  serialization_config.h
inc/nn_core/: dnn_layer.hpp  dnn_model.hpp  optimizers.hpp
inc/process_data/: process_data.h
inc/time_counting/: time_counting.h
src/: dnn_layer.cpp  dnn_model.cpp  main.cpp  main_data_parallel.cpp  main_rnn_model.cpp  main_single_process.cpp  main_tutorial_mpi.cpp  optimizers.cpp
src/layers/: basic_layer.cpp  fc_layer.cpp
src/linalg_1/: matrix.cpp
src/nn_core/: dnn_layer.cpp  dnn_model.cpp  optimizers.cpp
tests/: test.py
